--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,7 +137,7 @@ body {
 
 	&__body {
 		@media (max-width: toEm(1150)) {
-			padding: toRem(30) toRem(15);
+			padding: toRem(40) toRem(15);
 			position: absolute;
 			top: calc(100% + toRem(10));
 			left: 0;
@@ -145,13 +145,13 @@ body {
 			background: #fff;
 			opacity: 0;
 			z-index: 10;
-			overflow: auto; // Додаємо прокрутку
+			overflow: auto; 
 			max-height: 0;
 			transition:
 				max-height 0.4s ease,
 				opacity 0.3s ease;
 			.menu-open & {
-				max-height: 80vh; // Меню не займатиме більше 80% висоти екрану
+				max-height: 80vh; 
 				opacity: 1;
 				visibility: visible;
 			}
@@ -184,7 +184,7 @@ body {
 		@media (any-hover: hover) {
 			&:hover {
 				.menu__link {
-					color: #373cc5;
+					color: #1a659e;
 				}
 			}
 		}
@@ -194,7 +194,7 @@ body {
 	&__link {
 		position: relative;
 		font-size: toRem(16);
-		color: #21225b;
+		color: #095188;
 		transition: color 0.3s;
 		text-transform: uppercase;
 		line-height: 1.22em;
@@ -209,7 +209,7 @@ body {
 		position: relative;
 		width: toRem(33);
 		height: toRem(33);
-		background-color: #21225b;
+		background-color: #095188;
 		border: none;
 		padding: toRem(8) toRem(5.5);
 		appearance: none;
@@ -1414,7 +1414,7 @@ body {
 			width: toRem(60);
 			height: toRem(60);
 		}
-			@media (max-width: toRem(375)) {
+		@media (max-width: toRem(375)) {
 			bottom: toRem(320);
 			width: toRem(60);
 			height: toRem(60);
@@ -1504,5 +1504,209 @@ body {
 	transition: all 0.3s ease;
 	@media (max-width: toEm(480)) {
 		height: toRem(10);
+	}
+}
+
+//======================FAQ================================
+
+.faq {
+	@include adaptiveValue("padding-top", 100, 50);
+	padding-bottom: toRem(50);
+	// .faq__container
+
+	&__container {
+		max-width: toRem(1170);
+		display: flex;
+		gap: toRem(50);
+		@media (max-width: toEm(900)) {
+			flex-direction: column;
+		}
+	}
+
+	// .faq__left-part
+
+	&__left-part {
+		max-width: toRem(590);
+		padding: toRem(15) toRem(30) toRem(30) toRem(30);
+		border: toRem(1) solid #aca5a55d;
+		border-radius: toRem(20) toRem(0) toRem(20) toRem(0);
+		@media (max-width: toEm(480)) {
+			max-width: 100%;
+			padding: toRem(10);
+		}
+	}
+
+	// .faq__item
+
+	&__item {
+	}
+
+	// .faq__right-part
+
+	&__right-part {
+	}
+
+	// .faq__label
+
+	&__label {
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 25, 15);
+		}
+	}
+
+	// .faq__title
+
+	&__title {
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 30, 20);
+		}
+	}
+
+	// .faq__text
+
+	&__text {
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 30, 20);
+		}
+		@extend.item-details__text;
+	}
+
+	// .faq__subtitle
+
+	&__subtitle {
+		@extend .item-details__title;
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 20, 15);
+		}
+	}
+
+	// .faq__button
+
+	&__button {
+		width: fit-content;
+	}
+}
+.item-faq {
+	// .item-faq__header
+
+	&__header {
+		padding: toRem(10) 0;
+		display: flex;
+		gap: toRem(10);
+		cursor: pointer;
+		justify-content: space-between;
+		border-bottom: toRem(1) dashed #8b8b8b81;
+		img {
+			flex-shrink: 0;
+			width: toRem(25);
+			height: toRem(25);
+			transition: transform 0.3s ease;
+		}
+	}
+
+	// .item-faq__title
+
+	&__title {
+		line-height: 1.5;
+		font-weight: 500;
+		text-transform: uppercase;
+		color: #8b8b8b;
+		flex-grow: 1;
+		transition: color 0.3s ease;
+	}
+
+	// .item-faq__answer
+
+	&__answer {
+		@extend .item-details__text;
+		padding: toRem(10) 0;
+		overflow: hidden;
+		height: 0;
+		opacity: 0;
+		transition:
+			height 0.3s ease,
+			opacity 0.3s ease;
+	}
+}
+
+.faq__item.open .item-faq__answer {
+	display: block;
+	opacity: 1;
+	transform: translateY(0);
+}
+
+.faq__item.open .item-faq__header img {
+	transform: rotate(180deg);
+}
+
+.faq__item.open .item-faq__header h3 {
+	color: #095188;
+}
+//=======================POPUP=====================
+.popup {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: toRem(15);
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		opacity 0.3s ease,
+		visibility 0.3s ease;
+	z-index: 50;
+	&.active {
+		opacity: 1;
+		visibility: visible;
+	}
+	&__content {
+		background: #fff;
+		padding: toRem(40) toRem(20);
+		border-radius: toRem(20) 0 toRem(20) 0;
+		max-width: toRem(400);
+		width: 100%;
+		text-align: center;
+		position: relative;
+			@media (max-width: toEm(480)) {
+		padding: toRem(20) toRem(10);
+		}
+	}
+	&__close {
+		position: absolute;
+		top: toRem(10);
+		right: toRem(15);
+		font-size: toRem(25);
+		cursor: pointer;
+		color: #095188;
+	}
+	&__form {
+		display: flex;
+		flex-direction: column;
+		gap: toRem(20);
+		textarea {
+			resize: none;
+			min-height: toRem(100);
+		}
+	}
+	&__title {
+		@extend .item-details__title;
+		&:not(:last-child) {
+			margin-bottom: toRem(30);
+		}
+	}
+	&__input {
+		width: 100%;
+		padding: toRem(10);
+		border: toRem(1) solid #8b8b8b8e;
+		border-radius: toRem(5);
+		&:focus {
+			outline: none;
+			border-color: #1a659e;
+		}
 	}
 }
