--- a/css/style.css
+++ b/css/style.css
@@ -594,8 +594,8 @@ body.menu-open {
   min-height: 90vh;
   position: relative;
   background-color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#1a659e), to(#1a659e));
-  background-image: linear-gradient(180deg, #1a659e 0%, #1a659e 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1a659e), to(#095188));
+  background-image: linear-gradient(180deg, #1a659e 0%, #095188 100%);
   overflow: hidden;
   background-position: cover;
 }
@@ -605,20 +605,20 @@ body.menu-open {
   }
 }
 @media (min-width: 20em) and (max-width: 75em) {
-  @supports (padding-top: clamp( 6.25rem , 6.25rem  +  0vw , 6.25rem )) {
+  @supports (padding-top: clamp( 4.375rem , 3.6931818182rem  +  3.4090909091vw , 6.25rem )) {
     .hero {
-      padding-top: clamp( 6.25rem , 6.25rem  +  0vw , 6.25rem );
+      padding-top: clamp( 4.375rem , 3.6931818182rem  +  3.4090909091vw , 6.25rem );
     }
   }
-  @supports not (padding-top: clamp( 6.25rem , 6.25rem  +  0vw , 6.25rem )) {
+  @supports not (padding-top: clamp( 4.375rem , 3.6931818182rem  +  3.4090909091vw , 6.25rem )) {
     .hero {
-      padding-top: calc(6.25rem + 0 * (100vw - 20rem) / 55);
+      padding-top: calc(4.375rem + 1.875 * (100vw - 20rem) / 55);
     }
   }
 }
 @media (max-width: 20em) {
   .hero {
-    padding-top: 6.25rem;
+    padding-top: 4.375rem;
   }
 }
 @media (max-width: 55.625em) {
@@ -1533,6 +1533,20 @@ body.menu-open {
   max-height: 4.0625rem;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media (max-width: 38.75rem) {
+  .logo-partner__img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 calc(50% - 1.25rem);
+            flex: 1 1 calc(50% - 1.25rem);
+  }
+}
+@media (max-width: 26.25rem) {
+  .logo-partner__img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
 }
 
 .counter {
