--- a/scss/style.scss
+++ b/scss/style.scss
@@ -701,7 +701,7 @@ body {
 		@media (max-width: toRem(620)) {
 			flex: 1 1 calc(50% - toRem(20));
 		}
-			@media (max-width: toRem(420)) {
+		@media (max-width: toRem(420)) {
 			flex: 1 1 100%;
 		}
 	}
@@ -775,11 +775,10 @@ body {
 		border-radius: toRem(50) 0 0 0;
 		background-image: linear-gradient(180deg, #eaf1ff 0%, #ffffff00 50%);
 		margin-top: toRem(-200);
-		@include adaptiveValue("padding-top", 250, 50);
+		@include adaptiveValue("padding-top", 250, 100);
 		@include adaptiveValue("padding-bottom", 100, 50);
 		@media (max-width: toEm(960)) {
-			margin-top: toRem(50);
-			padding-top: toRem(80);
+			margin-top: toRem(-100);
 		}
 	}
 
@@ -825,7 +824,7 @@ body {
 
 	&__title {
 		&:not(:last-child) {
-			margin-bottom: toRem(50);
+			@include adaptiveValue("margin-bottom", 50, 30);
 		}
 	}
 
@@ -967,7 +966,7 @@ body {
 	&__title {
 		text-align: center;
 		&:not(:last-child) {
-			margin-bottom: toRem(90);
+			@include adaptiveValue("margin-bottom", 90, 50);
 		}
 	}
 
@@ -1101,15 +1100,22 @@ body {
 
 	&__title {
 		&:not(:last-child) {
-			margin-bottom: toRem(80);
+			margin-bottom: toRem(50);
 		}
 	}
 
 	&__items-wrap {
+		max-width: toRem(600);
 		display: grid;
-		gap: toRem(20);
+		grid-template-columns: repeat(2, 1fr);
+		gap: toRem(30);
 		padding-bottom: toRem(30);
 		border-bottom: toRem(2) dashed #8b8b8b9e;
+		align-items: flex-start;
+		@media (max-width: toEm(590)) {
+			grid-template-columns: 1fr;
+			max-width: 100%;
+		}
 		&:not(:last-child) {
 			margin-bottom: toRem(30);
 		}
@@ -1137,7 +1143,6 @@ body {
 
 .item-advantages {
 	display: flex;
-	align-items: center;
 	gap: toRem(10);
 	// .item-advantages__icon
 
